--- a/Quantumult/Quantumult.conf
+++ b/Quantumult/Quantumult.conf
@@ -12,10 +12,39 @@ system, 119.29.29.29,  223.5.5.5
 [URL-REJECTION]
 
 [TCP]
-# DIRECT
+# USER-AGENT 在 Quantumult 中有最高优先级，按顺序匹配
+## DIRECT
+USER-AGENT, %E4%BA%AC%E4%B8%9C%E5%88%B0%E5%AE%B6*,DIRECT
+USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
+USER-AGENT,*Vainglory* ,DIRECT
+USER-AGENT,AdBlock*,DIRECT
+USER-AGENT,arrowio*,DIRECT
+USER-AGENT,balls*,DIRECT
+USER-AGENT,Best%20Trace*,DIRECT
+USER-AGENT,cmblife*,DIRECT
+USER-AGENT,eusoft_ting_en_iphone,DIRECT
+USER-AGENT,hide*,DIRECT
+USER-AGENT,MegaWerewolf*,DIRECT
+USER-AGENT,MicroMessenger*,DIRECT
+USER-AGENT,Moke*,DIRECT
+USER-AGENT,osee2unifiedRelease*,DIRECT
+USER-AGENT,TeamViewer*,DIRECT
+USER-AGENT,ting_en,DIRECT
+USER-AGENT,WebTorrent*,DIRECT
 
+## PROXY
+USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
+USER-AGENT,*Telegram*,PROXY
+USER-AGENT,Coinbase*,PROXY
+USER-AGENT,Instagram*,PROXY
+USER-AGENT,Resilio Sync*,PROXY
+USER-AGENT,SoundCloud*,PROXY
+USER-AGENT,Twitch*,PROXY
+USER-AGENT,WhatsApp*,PROXY
+
+
+# DIRECT（优先级：DOMAIN>DOMAIN-SUFFIX>DOMAIN-KEYWORD）
 ## Apple
-
 // 定位相关
 USER-AGENT,com.apple.geod*,DIRECT
 USER-AGENT,com.apple.Maps,DIRECT
@@ -54,63 +83,20 @@ DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 ## 有国内外CDN的网站直连
+// DOMAIN
+DOMAIN,cdn.jsdelivr.net,DIRECT
+DOMAIN,lib.baomitu.com,DIRECT
+DOMAIN,upcdn.b0.upaiyun.com,DIRECT
+
 // DOMAIN-SUFFIX
 DOMAIN-SUFFIX,aliexpress.com,DIRECT
 DOMAIN-SUFFIX,ipip.net,DIRECT
 DOMAIN-SUFFIX,staticfile.org,DIRECT
 DOMAIN-SUFFIX,v2ex.com,DIRECT
 
+## 涉及 IP 检测的直连
 // DOMAIN
-DOMAIN,cdn.jsdelivr.net,DIRECT
-DOMAIN,lib.baomitu.com,DIRECT
-DOMAIN,upcdn.b0.upaiyun.com,DIRECT
-
-
-// Prior
-DOMAIN,client.amplifi.com,DIRECT
 DOMAIN,ip.bjango.com,DIRECT // iStat Menu IP Test
-DOMAIN-SUFFIX,alphassl.com,DIRECT
-
-// TeamViewer
-IP-CIDR,185.188.32.0/24,DIRECT,no-resolve
-IP-CIDR,185.188.33.0/24,DIRECT,no-resolve
-IP-CIDR,185.188.34.0/24,DIRECT,no-resolve
-IP-CIDR,185.188.35.0/24,DIRECT,no-resolve
-IP-CIDR6,2a0b:b580::/48,DIRECT,no-resolve
-IP-CIDR6,2a0b:b581::/48,DIRECT,no-resolve
-IP-CIDR6,2a0b:b582::/48,DIRECT,no-resolve
-IP-CIDR6,2a0b:b583::/48,DIRECT,no-resolve
-
-//腾讯IP
-IP-CIDR,134.175.0.0/16,DIRECT
-
-// Client
-PROCESS-NAME,Paws for Trello,DIRECT
-PROCESS-NAME,Thunder,DIRECT
-PROCESS-NAME,trustd,DIRECT
-PROCESS-NAME,WeChat,DIRECT
-
-// UA
-USER-AGENT, %E4%BA%AC%E4%B8%9C%E5%88%B0%E5%AE%B6*,DIRECT
-USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
-USER-AGENT,*Vainglory* ,DIRECT
-USER-AGENT,AdBlock*,DIRECT
-USER-AGENT,arrowio*,DIRECT
-USER-AGENT,balls*,DIRECT
-USER-AGENT,Best%20Trace*,DIRECT
-USER-AGENT,cmblife*,DIRECT
-USER-AGENT,eusoft_ting_en_iphone,DIRECT
-USER-AGENT,hide*,DIRECT
-USER-AGENT,MegaWerewolf*,DIRECT
-USER-AGENT,MicroMessenger*,DIRECT
-USER-AGENT,Moke*,DIRECT
-USER-AGENT,osee2unifiedRelease*,DIRECT
-USER-AGENT,QQ*,DIRECT
-USER-AGENT,TeamViewer*,DIRECT
-USER-AGENT,TIM*,DIRECT
-USER-AGENT,ting_en,DIRECT
-USER-AGENT,WebTorrent*,DIRECT
-USER-AGENT,WeChat*,DIRECT
 
 // Accelerate direct sites
 DOMAIN-KEYWORD,torrent,DIRECT
@@ -120,8 +106,7 @@ URL-REGEX,*(360|so)\.(cn|com),DIRECT
 URL-REGEX,(torrent|*\.torrent|peer_id=*|announce|info_hash|get_peers|find_node|BitTorrent|announce_peer|protocol|*\.php\?passkey=*),DIRECT
 
 
-# PROXY
-
+# PROXY（优先级：DOMAIN>DOMAIN-SUFFIX>DOMAIN-KEYWORD）
 // Spark
 DOMAIN-SUFFIX,smartmailcloud.com,PROXY
 
@@ -149,7 +134,8 @@ DOMAIN-SUFFIX,line-cdn.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,line-scdn.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,nhncorp.jp,PROXY,force-remote-dns
 
-// Top blocked sites
+## Top blocked sites
+// DOMAIN-SUFFIX
 DOMAIN-SUFFIX,2o7.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4everProxy.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4shared.com,PROXY,force-remote-dns
@@ -692,7 +678,8 @@ DOMAIN-SUFFIX,zaobao.com.sg,PROXY,force-remote-dns
 DOMAIN-SUFFIX,zeutch.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,zynamics.com,PROXY,force-remote-dns
 
-//DNS污染的网站
+## 被 DNS 污染的网站
+// DOMAIN-SUFFIX
 DOMAIN-SUFFIX,1e100.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,2mdn.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
@@ -740,111 +727,6 @@ DOMAIN-SUFFIX,waveprotocol.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webmproject.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webrtc.org,PROXY,force-remote-dns
 
-// Amazon
-IP-CIDR,13.32.0.0/16,PROXY,no-resolve
-IP-CIDR,13.33.0.0/16,PROXY,no-resolve
-IP-CIDR,13.35.0.0/17,PROXY,no-resolve
-IP-CIDR,18.184.0.0/15,PROXY,no-resolve
-IP-CIDR,18.194.0.0/15,PROXY,no-resolve
-IP-CIDR,18.208.0.0/13,PROXY,no-resolve
-IP-CIDR,18.232.0.0/14,PROXY,no-resolve
-IP-CIDR,52.200.0.0/13,PROXY,no-resolve
-IP-CIDR,52.58.0.0/15,PROXY,no-resolve
-IP-CIDR,52.74.0.0/16,PROXY,no-resolve
-IP-CIDR,52.77.0.0/16,PROXY,no-resolve
-IP-CIDR,52.84.0.0/15,PROXY,no-resolve
-IP-CIDR,54.156.0.0/14,PROXY,no-resolve
-IP-CIDR,54.226.0.0/15,PROXY,no-resolve
-IP-CIDR,54.230.156.0/22,PROXY,no-resolve
-IP-CIDR,54.93.0.0/16,PROXY,no-resolve
-
-// Facebook
-IP-CIDR,103.4.96.0/22,PROXY,no-resolve
-IP-CIDR,129.134.0.0/17,PROXY,no-resolve
-IP-CIDR,157.240.0.0/17,PROXY,no-resolve
-IP-CIDR,173.252.64.0/19,PROXY,no-resolve
-IP-CIDR,173.252.96.0/19,PROXY,no-resolve
-IP-CIDR,179.60.192.0/22,PROXY,no-resolve
-IP-CIDR,185.60.216.0/22,PROXY,no-resolve
-IP-CIDR,204.15.20.0/22,PROXY,no-resolve
-IP-CIDR,31.13.24.0/21,PROXY,no-resolve
-IP-CIDR,31.13.64.0/18,PROXY,no-resolve
-IP-CIDR,45.64.40.0/22,PROXY,no-resolve
-IP-CIDR,66.220.144.0/20,PROXY,no-resolve
-IP-CIDR,69.171.224.0/19,PROXY,no-resolve
-IP-CIDR,69.63.176.0/20,PROXY,no-resolve
-IP-CIDR,74.119.76.0/22,PROXY,no-resolve
-
-// Google
-IP-CIDR,173.194.0.0/16,PROXY,no-resolve
-IP-CIDR,74.125.0.0/16,PROXY,no-resolve
-
-// Kakao Talk
-IP-CIDR,1.201.0.0/24,PROXY,no-resolve
-IP-CIDR,103.246.56.0/22,PROXY,no-resolve
-IP-CIDR,103.27.148.0/22,PROXY,no-resolve
-IP-CIDR,110.76.140.0/22,PROXY,no-resolve
-IP-CIDR,113.61.104.0/22,PROXY,no-resolve
-IP-CIDR,27.0.236.0/22,PROXY,no-resolve
-
-// LINE
-IP-CIDR,103.2.28.0/22,PROXY,no-resolve
-IP-CIDR,119.235.224.0/21,PROXY,no-resolve
-IP-CIDR,119.235.232.0/23,PROXY,no-resolve
-IP-CIDR,119.235.235.0/24,PROXY,no-resolve
-IP-CIDR,119.235.236.0/23,PROXY,no-resolve
-IP-CIDR,125.6.146.0/24,PROXY,no-resolve
-IP-CIDR,125.6.149.0/24,PROXY,no-resolve
-IP-CIDR,125.6.190.0/24,PROXY,no-resolve
-IP-CIDR,125.209.208.0/20,PROXY,no-resolve
-IP-CIDR,203.104.103.0/24,PROXY,no-resolve
-IP-CIDR,203.104.128.0/20,PROXY,no-resolve
-IP-CIDR,203.174.66.64/26,PROXY,no-resolve
-IP-CIDR,203.174.77.0/24,PROXY,no-resolve
-
-// Potato Chat
-IP-CIDR,13.251.24.157/24,PROXY,no-resolve
-IP-CIDR,13.251.41.203/24,PROXY,no-resolve
-IP-CIDR,17.252.156.147/24,PROXY,no-resolve
-IP-CIDR,17.252.157.26/24,PROXY,no-resolve
-
-// SoftLayer
-IP-CIDR,74.86.0.0/16,PROXY,no-resolve
-IP-CIDR,75.126.0.0/16,PROXY,no-resolve
-IP-CIDR,174.37.0.0/16,PROXY,no-resolve
-IP-CIDR,208.43.0.0/16,PROXY,no-resolve
-
-// Telegram
-IP-CIDR,109.239.140.0/24,PROXY,no-resolve
-IP-CIDR,149.154.164.0/22,PROXY,no-resolve
-IP-CIDR,149.154.168.0/22,PROXY,no-resolve
-IP-CIDR,149.154.172.0/22,PROXY,no-resolve
-IP-CIDR,91.108.4.0/22,PROXY,no-resolve
-IP-CIDR,91.108.56.0/22,PROXY,no-resolve
-IP-CIDR,91.108.56.0/23,PROXY,no-resolve
-IP-CIDR6,2001:67c:4e8::/48,PROXY,no-resolve
-IP-CIDR6,2001:b28:f23d::/48,PROXY,no-resolve
-IP-CIDR6,2001:b28:f23f::/48,PROXY,no-resolve
-
-// Client
-PROCESS-NAME,Backup and Sync,PROXY
-PROCESS-NAME,Day One,PROXY
-PROCESS-NAME,Dropbox,PROXY
-PROCESS-NAME,node-webkit,PROXY
-PROCESS-NAME,Telegram,PROXY
-PROCESS-NAME,Tweetbot,PROXY
-PROCESS-NAME,Twitter,PROXY
-
-// UA
-USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
-USER-AGENT,*Telegram*,PROXY
-USER-AGENT,Coinbase*,PROXY
-USER-AGENT,Instagram*,PROXY
-USER-AGENT,Resilio Sync*,PROXY
-USER-AGENT,SoundCloud*,PROXY
-USER-AGENT,Twitch*,PROXY
-USER-AGENT,WhatsApp*,PROXY
-
 //KEYWORD
 DOMAIN-KEYWORD,amazon,PROXY,force-remote-dns
 DOMAIN-KEYWORD,appledaily,PROXY,force-remote-dns
@@ -862,6 +744,9 @@ DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
 DOMAIN-KEYWORD,dropbox,PROXY,force-remote-dns
 DOMAIN-KEYWORD,telegram,PROXY,force-remote-dns
 DOMAIN-KEYWORD,whatsapp,PROXY,force-remote-dns
+
+# IP 类规则匹配直接指定 IP 的行为或未指定规则的域名在解析出 IP 之后的行为，不想域名与该 IP 规则匹配填写 no-resolve，IP 规则按顺序匹配
+# 举例：IP-CIDR,54.226.0.0/15,PROXY,no-resolve
 
 
 # 自定义
