--- a/Quantumult/Quantumult.conf
+++ b/Quantumult/Quantumult.conf
@@ -140,6 +140,7 @@ DOMAIN-SUFFIX,2o7.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4everProxy.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4shared.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4sqi.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,91porn.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,9to5mac.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,abpchina.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,accountkit.com,PROXY,force-remote-dns
@@ -186,6 +187,9 @@ DOMAIN-SUFFIX,azureedge.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,azurewebsites.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,badoo.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bandisoft.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,bbc.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,bbc.co.uk,PROXY,force-remote-dns
+DOMAIN-SUFFIX,bbc.in,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bbtoystore.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,betvictor.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bigsound.org,PROXY,force-remote-dns
@@ -403,6 +407,8 @@ DOMAIN-SUFFIX,nrk.no,PROXY,force-remote-dns
 DOMAIN-SUFFIX,nsstatic.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,nssurge.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,nyt.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,nytchina.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,nyti.ms,PROXY,force-remote-dns
 DOMAIN-SUFFIX,nytimes.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,nytimg.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,nytstyle.com,PROXY,force-remote-dns
@@ -749,8 +755,8 @@ DOMAIN-KEYWORD,whatsapp,PROXY,force-remote-dns
 # 举例：IP-CIDR,54.226.0.0/15,PROXY,no-resolve
 
 
-# 自定义
-
+# 通用自定义
+## 全球
 //Google
 DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
 DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
@@ -839,6 +845,12 @@ IP-CIDR,192.173.64.0/18,选择Netflix的策略，不懂就不选,no-resolve
 IP-CIDR,198.38.0.0/12,选择Netflix的策略，不懂就不选,no-resolve
 IP-CIDR,198.45.0.0/12,选择Netflix的策略，不懂就不选,no-resolve
 
+## JP 限定
+### 游戏
+// DMM
+DOMAIN-SUFFIX,dmm.com,选择DMM的策略，不懂就用PROXY,force-remote-dns
+DOMAIN-SUFFIX,dmmgames.com,选择DMM的策略，不懂就用PROXY,force-remote-dns
+
 
 // LAN,debugging rules should place above this line
 DOMAIN-SUFFIX,local,DIRECT
@@ -851,6 +863,10 @@ IP-CIDR,192.168.0.0/16,DIRECT
 # final
 // Detect local network
 GEOIP,CN,DIRECT
+// JP 限定
+GEOIP,JP,指定只有JP IP的应用或网站（如DMM游戏）的策略，不懂就选PROXY
+// US 限定
+GEOIP,US,指定只有US IP的应用或网站的策略，不懂就选PROXY
 // Use Proxy for all others
 FINAL,PROXY
 
