--- a/Quantumult/Quantumult.conf
+++ b/Quantumult/Quantumult.conf
@@ -45,7 +45,7 @@ USER-AGENT,WhatsApp*,PROXY
 
 # DIRECT（优先级：DOMAIN>DOMAIN-SUFFIX>DOMAIN-KEYWORD）
 ## Apple
-// 定位相关
+### 定位相关
 USER-AGENT,com.apple.geod*,DIRECT
 USER-AGENT,com.apple.Maps,DIRECT
 USER-AGENT,FindMyFriends*,DIRECT
@@ -57,14 +57,14 @@ USER-AGENT,geod*,DIRECT
 USER-AGENT,locationd*,DIRECT
 USER-AGENT,Maps*,DIRECT
 
-// 支付相关
+### 支付相关
 USER-AGENT,*Passbook*,DIRECT
 USER-AGENT,passd*,DIRECT
 USER-AGENT,seld*,DIRECT
 USER-AGENT,trustd*,DIRECT
 USER-AGENT,Wallet/1.0*,DIRECT
 
-// Siri
+### Siri
 USER-AGENT,*AssistantServices*,DIRECT
 USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
@@ -83,22 +83,22 @@ DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 ## 有国内外CDN的网站直连
-// DOMAIN
+### DOMAIN
 DOMAIN,cdn.jsdelivr.net,DIRECT
 DOMAIN,lib.baomitu.com,DIRECT
 DOMAIN,upcdn.b0.upaiyun.com,DIRECT
 
-// DOMAIN-SUFFIX
+### DOMAIN-SUFFIX
 DOMAIN-SUFFIX,aliexpress.com,DIRECT
 DOMAIN-SUFFIX,ipip.net,DIRECT
 DOMAIN-SUFFIX,staticfile.org,DIRECT
 DOMAIN-SUFFIX,v2ex.com,DIRECT
 
 ## 涉及 IP 检测的直连
-// DOMAIN
+### DOMAIN
 DOMAIN,ip.bjango.com,DIRECT // iStat Menu IP Test
 
-// Accelerate direct sites
+## P2P 下载相关
 DOMAIN-KEYWORD,torrent,DIRECT
 URL-REGEX,ed2k*,DIRECT
 URL-REGEX,magnet*,DIRECT
@@ -107,25 +107,25 @@ URL-REGEX,(torrent|*\.torrent|peer_id=*|announce|info_hash|get_peers|find_node|B
 
 
 # PROXY（优先级：DOMAIN>DOMAIN-SUFFIX>DOMAIN-KEYWORD）
-// Spark
+## Spark
 DOMAIN-SUFFIX,smartmailcloud.com,PROXY
 
-// Steam
+## Steam
 DOMAIN-SUFFIX,fanatical.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,humblebundle.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,steamcommunity.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,steampowered.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,steamstatic.com,PROXY,force-remote-dns
 
-// CHOCO TV
+## CHOCO TV
 USER-AGENT,TwDramas,PROXY
 DOMAIN-SUFFIX,chocotv.com.tw,PROXY,force-remote-dns
 
-// Epicgames
+## Epicgames
 DOMAIN-KEYWORD,epicgames,Proxy,force-remote-dns
 DOMAIN-SUFFIX,helpshift.com,Proxy,force-remote-dns
 
-// Line
+## Line
 DOMAIN-SUFFIX,lin.ee,PROXY,force-remote-dns
 DOMAIN-SUFFIX,line.me,PROXY,force-remote-dns
 DOMAIN-SUFFIX,line.naver.jp,PROXY,force-remote-dns
@@ -135,7 +135,7 @@ DOMAIN-SUFFIX,line-scdn.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,nhncorp.jp,PROXY,force-remote-dns
 
 ## Top blocked sites
-// DOMAIN-SUFFIX
+### DOMAIN-SUFFIX
 DOMAIN-SUFFIX,2o7.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4everProxy.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4shared.com,PROXY,force-remote-dns
@@ -188,7 +188,6 @@ DOMAIN-SUFFIX,azurewebsites.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,badoo.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bandisoft.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bbc.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bbc.co.uk,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bbc.in,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bbtoystore.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,betvictor.com,PROXY,force-remote-dns
@@ -685,7 +684,7 @@ DOMAIN-SUFFIX,zeutch.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,zynamics.com,PROXY,force-remote-dns
 
 ## 被 DNS 污染的网站
-// DOMAIN-SUFFIX
+### DOMAIN-SUFFIX
 DOMAIN-SUFFIX,1e100.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,2mdn.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
@@ -733,7 +732,7 @@ DOMAIN-SUFFIX,waveprotocol.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webmproject.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webrtc.org,PROXY,force-remote-dns
 
-//KEYWORD
+### KEYWORD
 DOMAIN-KEYWORD,amazon,PROXY,force-remote-dns
 DOMAIN-KEYWORD,appledaily,PROXY,force-remote-dns
 DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
@@ -752,107 +751,120 @@ DOMAIN-KEYWORD,telegram,PROXY,force-remote-dns
 DOMAIN-KEYWORD,whatsapp,PROXY,force-remote-dns
 
 # IP 类规则匹配直接指定 IP 的行为或未指定规则的域名在解析出 IP 之后的行为，不想域名与该 IP 规则匹配填写 no-resolve，IP 规则按顺序匹配
-# 举例：IP-CIDR,54.226.0.0/15,PROXY,no-resolve
+## 举例：IP-CIDR,54.226.0.0/15,PROXY,no-resolve
 
 
 # 通用自定义
 ## 全球
-//Google
+### Google
 DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
 DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
-DOMAIN-SUFFIX,goo.gl,选择Google的策略，不懂就不选,force-remote-dns
-DOMAIN-SUFFIX,gvt1.com,选择Google的策略，不懂就不选,force-remote-dns
-DOMAIN-SUFFIX,youtu.be,选择Google的策略，不懂就不选,force-remote-dns
-DOMAIN-SUFFIX,ytimg.com,选择Google的策略，不懂就不选,force-remote-dns
-DOMAIN-SUFFIX,ggpht.com,选择Google的策略，不懂就不选,force-remote-dns
-DOMAIN-SUFFIX,google.com,选择Google的策略，不懂就不选,force-remote-dns
-DOMAIN-SUFFIX,googleapis.com,选择Google的策略，不懂就不选,force-remote-dns
-DOMAIN-KEYWORD,gmail,选择Google的策略，不懂就不选,force-remote-dns
-DOMAIN-KEYWORD,google,选择Google的策略，不懂就不选,force-remote-dns
-DOMAIN-KEYWORD,gstatic,选择Google的策略，不懂就不选,force-remote-dns
-DOMAIN-KEYWORD,youtube,选择Google的策略，不懂就不选,force-remote-dns
+DOMAIN-SUFFIX,goo.gl,选择Google的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,gvt1.com,选择Google的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,youtu.be,选择Google的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,ytimg.com,选择Google的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,ggpht.com,选择Google的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,google.com,选择Google的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,googleapis.com,选择Google的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-KEYWORD,gmail,选择Google的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-KEYWORD,google,选择Google的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-KEYWORD,gstatic,选择Google的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-KEYWORD,youtube,选择Google的策略，不懂就选PROXY,force-remote-dns
 
-// Microsoft
-USER-AGENT,Microsoft*,选择微软服务的策略，不懂就选择DIRECT
-USER-AGENT,OneDrive*,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-KEYWORD,microsoft,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,bing.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,bing.net,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,cloudappsecurity.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,docs.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,hotmail.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,live.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,live.net,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,microsoft.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,msedge.net,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,msn.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,office.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,office.net,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,office365.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,onedrive.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,onenote.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,onenote.net,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,onmicrosoft.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,outlook.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,outlookgroups.ms,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,visualstudio.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,windows.com,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,windows.net,选择微软服务的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,windowsupdate.com,选择微软服务的策略，不懂就选择DIRECT
+### Microsoft
+USER-AGENT,Microsoft*,选择微软服务的策略，不懂就选DIRECT
+USER-AGENT,OneDrive*,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-KEYWORD,microsoft,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,bing.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,bing.net,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,cloudappsecurity.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,docs.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,hotmail.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,live.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,live.net,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,microsoft.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,msedge.net,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,msn.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,office.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,office.net,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,office365.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,onedrive.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,onenote.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,onenote.net,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,onmicrosoft.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,outlook.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,outlookgroups.ms,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,visualstudio.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,windows.com,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,windows.net,选择微软服务的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,windowsupdate.com,选择微软服务的策略，不懂就选DIRECT
 
-//PayPal
-USER-AGENT,PayPal*,选择PayPal的策略，不懂就选择DIRECT
-DOMAIN-KEYWORD,paypal,选择PayPal的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,paypal.com,选择PayPal的策略，不懂就选择DIRECT
+### PayPal
+USER-AGENT,PayPal*,选择PayPal的策略，不懂就选DIRECT
+DOMAIN-KEYWORD,paypal,选择PayPal的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,paypal.com,选择PayPal的策略，不懂就选DIRECT
 
-//Apple
-IP-CIDR,17.0.0.0/8,选择Apple的策略，不懂就选择DIRECT
-DOMAIN,appleiphonecell.com,选择Apple的策略，不懂就选择DIRECT
-USER-AGENT,AppStore*,选择Apple的策略，不懂就选择DIRECT
-USER-AGENT,com.apple.appstored*,选择Apple的策略，不懂就选择DIRECT
-USER-AGENT,cloudd*,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-KEYWORD,icloud,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-KEYWORD,itunes,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,aaplimg.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,apple.co,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,apple.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,appsto.re,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,me.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,mzstatic.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,icloud.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,icloud-content.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,itunes.com,选择Apple的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,itunes-apple.com.akadns.net,选择Apple的策略，不懂就选择DIRECT
+### Apple
+IP-CIDR,17.0.0.0/8,选择Apple的策略，不懂就选DIRECT
+DOMAIN,appleiphonecell.com,选择Apple的策略，不懂就选DIRECT
+USER-AGENT,AppStore*,选择Apple的策略，不懂就选DIRECT
+USER-AGENT,com.apple.appstored*,选择Apple的策略，不懂就选DIRECT
+USER-AGENT,cloudd*,选择Apple的策略，不懂就选DIRECT
+DOMAIN-KEYWORD,icloud,选择Apple的策略，不懂就选DIRECT
+DOMAIN-KEYWORD,itunes,选择Apple的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,aaplimg.com,选择Apple的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,apple.co,选择Apple的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,apple.com,选择Apple的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,appsto.re,选择Apple的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,cdn-apple.com,选择Apple的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,me.com,选择Apple的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,mzstatic.com,选择Apple的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,icloud.com,选择Apple的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,icloud-content.com,选择Apple的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,itunes.com,选择Apple的策略，不懂就选DIRECT
+DOMAIN-SUFFIX,itunes-apple.com.akadns.net,选择Apple的策略，不懂就选DIRECT
 
-//Netflix
-DOMAIN-SUFFIX,netflix.com,选择Netflix的策略，不懂就不选,force-remote-dns
-DOMAIN-SUFFIX,netflix.net,选择Netflix的策略，不懂就不选,force-remote-dns
-DOMAIN-SUFFIX,nflxso.net,选择Netflix的策略，不懂就不选,force-remote-dns
-DOMAIN-SUFFIX,nflxext.com,选择Netflix的策略，不懂就不选,force-remote-dns
-DOMAIN-SUFFIX,nflximg.com,选择Netflix的策略，不懂就不选,force-remote-dns
-DOMAIN-SUFFIX,nflximg.net,选择Netflix的策略，不懂就不选,force-remote-dns
-DOMAIN-SUFFIX,nflxvideo.net,选择Netflix的策略，不懂就不选,force-remote-dns
-IP-CIDR,23.246.0.0/12,选择Netflix的策略，不懂就不选,no-resolve
-IP-CIDR,37.77.0.0/12,选择Netflix的策略，不懂就不选,no-resolve
-IP-CIDR,45.57.0.0/12,选择Netflix的策略，不懂就不选,no-resolve
-IP-CIDR,64.120.128.0/17,选择Netflix的策略，不懂就不选,no-resolve
-IP-CIDR,66.197.128.0/17,选择Netflix的策略，不懂就不选,no-resolve
-IP-CIDR,108.175.0.0/12,选择Netflix的策略，不懂就不选,no-resolve
-IP-CIDR,185.2.0.0/12,选择Netflix的策略，不懂就不选,no-resolve
-IP-CIDR,185.9.188.0/22,选择Netflix的策略，不懂就不选,no-resolve
-IP-CIDR,192.173.64.0/18,选择Netflix的策略，不懂就不选,no-resolve
-IP-CIDR,198.38.0.0/12,选择Netflix的策略，不懂就不选,no-resolve
-IP-CIDR,198.45.0.0/12,选择Netflix的策略，不懂就不选,no-resolve
+## 视频相关
+### Netflix
+DOMAIN-SUFFIX,netflix.com,选择Netflix的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,netflix.net,选择Netflix的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,nflxso.net,选择Netflix的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,nflxext.com,选择Netflix的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,nflximg.com,选择Netflix的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,nflximg.net,选择Netflix的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,nflxvideo.net,选择Netflix的策略，不懂就选PROXY,force-remote-dns
+IP-CIDR,23.246.0.0/12,选择Netflix的策略，不懂就选PROXY,no-resolve
+IP-CIDR,37.77.0.0/12,选择Netflix的策略，不懂就选PROXY,no-resolve
+IP-CIDR,45.57.0.0/12,选择Netflix的策略，不懂就选PROXY,no-resolve
+IP-CIDR,64.120.128.0/17,选择Netflix的策略，不懂就选PROXY,no-resolve
+IP-CIDR,66.197.128.0/17,选择Netflix的策略，不懂就选PROXY,no-resolve
+IP-CIDR,108.175.0.0/12,选择Netflix的策略，不懂就选PROXY,no-resolve
+IP-CIDR,185.2.0.0/12,选择Netflix的策略，不懂就选PROXY,no-resolve
+IP-CIDR,185.9.188.0/22,选择Netflix的策略，不懂就选PROXY,no-resolve
+IP-CIDR,192.173.64.0/18,选择Netflix的策略，不懂就选PROXY,no-resolve
+IP-CIDR,198.38.0.0/12,选择Netflix的策略，不懂就选PROXY,no-resolve
+IP-CIDR,198.45.0.0/12,选择Netflix的策略，不懂就选PROXY,no-resolve
 
-## JP 限定
-### 游戏
-// DMM
+### Hulu
+DOMAIN-SUFFIX,hulu.com,选择Hulu的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,huluim.com,选择Hulu的策略，不懂就选PROXY,force-remote-dns
+
+### HBO
+DOMAIN-SUFFIX,hbo.com,选择HBO的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,hbogo.com,选择HBO的策略，不懂就选PROXY,force-remote-dns
+DOMAIN-SUFFIX,hbonow.com,选择HBO的策略，不懂就选PROXY,force-remote-dns
+
+### BBC iPlayer
+DOMAIN-SUFFIX,bbc.co.uk,选择BBC iPlayer的策略，不懂就选PROXY,force-remote-dns
+
+## 游戏相关
+### JP 游戏
+#### DMM
 DOMAIN-SUFFIX,dmm.com,选择DMM的策略，不懂就用PROXY,force-remote-dns
 DOMAIN-SUFFIX,dmmgames.com,选择DMM的策略，不懂就用PROXY,force-remote-dns
 
 
-// LAN,debugging rules should place above this line
+# LAN,debugging rules should place above this line
 DOMAIN-SUFFIX,local,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
@@ -864,9 +876,9 @@ IP-CIDR,192.168.0.0/16,DIRECT
 // Detect local network
 GEOIP,CN,DIRECT
 // JP 限定
-GEOIP,JP,指定只有JP IP的应用或网站（如DMM游戏）的策略，不懂就选PROXY
+GEOIP,JP,仅会返回JP IP时的策略，不懂就选PROXY
 // US 限定
-GEOIP,US,指定只有US IP的应用或网站的策略，不懂就选PROXY
+GEOIP,US,仅会返回US IP时的策略，不懂就选PROXY
 // Use Proxy for all others
 FINAL,PROXY
 
