--- a/Quantumult/Quantumult.conf
+++ b/Quantumult/Quantumult.conf
@@ -15,7 +15,6 @@ system, 119.29.29.29,  223.5.5.5
 # USER-AGENT 在 Quantumult 中有最高优先级，按顺序匹配
 ## DIRECT
 USER-AGENT, %E4%BA%AC%E4%B8%9C%E5%88%B0%E5%AE%B6*,DIRECT
-USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
 USER-AGENT,*Vainglory* ,DIRECT
 USER-AGENT,AdBlock*,DIRECT
 USER-AGENT,arrowio*,DIRECT
@@ -26,7 +25,6 @@ USER-AGENT,eusoft_ting_en_iphone,DIRECT
 USER-AGENT,hide*,DIRECT
 USER-AGENT,MegaWerewolf*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
-USER-AGENT,Moke*,DIRECT
 USER-AGENT,osee2unifiedRelease*,DIRECT
 USER-AGENT,TeamViewer*,DIRECT
 USER-AGENT,ting_en,DIRECT
@@ -89,10 +87,24 @@ DOMAIN,lib.baomitu.com,DIRECT
 DOMAIN,upcdn.b0.upaiyun.com,DIRECT
 
 ### DOMAIN-SUFFIX
+DOMAIN-SUFFIX,3.cn,DIRECT
+DOMAIN-SUFFIX,360buyimg.com,DIRECT
+DOMAIN-SUFFIX,alicdn.com,DIRECT
 DOMAIN-SUFFIX,aliexpress.com,DIRECT
+DOMAIN-SUFFIX,alipayobjects.com,DIRECT
+DOMAIN-SUFFIX,baidu.com,DIRECT
+DOMAIN-SUFFIX,bdstatic.com,DIRECT
+DOMAIN-SUFFIX,doubanio.com,DIRECT
 DOMAIN-SUFFIX,ipip.net,DIRECT
+DOMAIN-SUFFIX,jd.com,DIRECT
+DOMAIN-SUFFIX,mmstat.com,DIRECT
+DOMAIN-SUFFIX,sinaimg.cn,DIRECT
+DOMAIN-SUFFIX,sinajs.cn,DIRECT
+DOMAIN-SUFFIX,sina.com.cn,DIRECT
 DOMAIN-SUFFIX,staticfile.org,DIRECT
+DOMAIN-SUFFIX,taobao.com,DIRECT
 DOMAIN-SUFFIX,v2ex.com,DIRECT
+DOMAIN-SUFFIX,weibo.cn,DIRECT
 
 ## 涉及 IP 检测的直连
 ### DOMAIN
@@ -346,6 +358,7 @@ DOMAIN-SUFFIX,itun.es,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ixquick.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,j.mp,PROXY,force-remote-dns
 DOMAIN-SUFFIX,javbus.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,javlibrary.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,js.revsci.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,jshint.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,jtvnw.net,PROXY,force-remote-dns
@@ -520,7 +533,6 @@ DOMAIN-SUFFIX,symauth.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,symcb.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,symcd.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,t.me,PROXY,force-remote-dns
-DOMAIN-SUFFIX,t66y.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,tablesgenerator.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,tabtter.jp,PROXY,force-remote-dns
 DOMAIN-SUFFIX,talk853.com,PROXY,force-remote-dns
@@ -720,6 +732,7 @@ DOMAIN-SUFFIX,pinimg.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,pixiv.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,pubnub.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,t.co,PROXY,force-remote-dns
+DOMAIN-SUFFIX,t66y.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,tensorflow.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,thefacebook.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,toggleable.com,PROXY,force-remote-dns
@@ -861,6 +874,7 @@ DOMAIN-SUFFIX,bbc.co.uk,选择BBC iPlayer的策略，不懂就选PROXY,force-rem
 ### JP 游戏
 #### DMM
 DOMAIN-SUFFIX,dmm.com,选择DMM的策略，不懂就用PROXY,force-remote-dns
+DOMAIN-SUFFIX,dmm.co.jp,选择DMM的策略，不懂就用PROXY,force-remote-dns
 DOMAIN-SUFFIX,dmmgames.com,选择DMM的策略，不懂就用PROXY,force-remote-dns
 
 
