--- a/Quantumult/Quantumult.conf
+++ b/Quantumult/Quantumult.conf
@@ -14,13 +14,11 @@ system, 119.29.29.29,  223.5.5.5
 [TCP]
 # USER-AGENT 在 Quantumult 中有最高优先级，按顺序匹配
 ## DIRECT
-USER-AGENT, %E4%BA%AC%E4%B8%9C%E5%88%B0%E5%AE%B6*,DIRECT
 USER-AGENT,*Vainglory* ,DIRECT
 USER-AGENT,AdBlock*,DIRECT
 USER-AGENT,arrowio*,DIRECT
 USER-AGENT,balls*,DIRECT
 USER-AGENT,Best%20Trace*,DIRECT
-USER-AGENT,cmblife*,DIRECT
 USER-AGENT,eusoft_ting_en_iphone,DIRECT
 USER-AGENT,hide*,DIRECT
 USER-AGENT,MegaWerewolf*,DIRECT
@@ -31,8 +29,6 @@ USER-AGENT,ting_en,DIRECT
 USER-AGENT,WebTorrent*,DIRECT
 
 ## PROXY
-USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
-USER-AGENT,*Telegram*,PROXY
 USER-AGENT,Coinbase*,PROXY
 USER-AGENT,Instagram*,PROXY
 USER-AGENT,Resilio Sync*,PROXY
@@ -80,37 +76,26 @@ DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
 DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
-## 有国内外CDN的网站直连
+## 国内无CDN网站直连（给海外改 PROXY 用）
 ### DOMAIN
-DOMAIN,cdn.jsdelivr.net,DIRECT
-DOMAIN,lib.baomitu.com,DIRECT
-DOMAIN,upcdn.b0.upaiyun.com,DIRECT
+DOMAIN,oschina.net,DIRECT
+DOMAIN,oscimg.oschina.net,DIRECT
+DOMAIN,www.oschina.net,DIRECT
 
 ### DOMAIN-SUFFIX
-DOMAIN-SUFFIX,3.cn,DIRECT
-DOMAIN-SUFFIX,360buyimg.com,DIRECT
-DOMAIN-SUFFIX,alicdn.com,DIRECT
-DOMAIN-SUFFIX,aliexpress.com,DIRECT
-DOMAIN-SUFFIX,alipayobjects.com,DIRECT
-DOMAIN-SUFFIX,baidu.com,DIRECT
-DOMAIN-SUFFIX,bdstatic.com,DIRECT
-DOMAIN-SUFFIX,doubanio.com,DIRECT
-DOMAIN-SUFFIX,ipip.net,DIRECT
-DOMAIN-SUFFIX,jd.com,DIRECT
-DOMAIN-SUFFIX,mmstat.com,DIRECT
-DOMAIN-SUFFIX,sinaimg.cn,DIRECT
-DOMAIN-SUFFIX,sinajs.cn,DIRECT
-DOMAIN-SUFFIX,sina.com.cn,DIRECT
-DOMAIN-SUFFIX,staticfile.org,DIRECT
-DOMAIN-SUFFIX,taobao.com,DIRECT
-DOMAIN-SUFFIX,v2ex.com,DIRECT
-DOMAIN-SUFFIX,weibo.cn,DIRECT
+DOMAIN-SUFFIX,114la.com,DIRECT
+DOMAIN-SUFFIX,17ce.com,DIRECT
+DOMAIN-SUFFIX,189.cn,DIRECT
+DOMAIN-SUFFIX,bootcdn.cn,DIRECT
+DOMAIN-SUFFIX,sinaapp.com,DIRECT
+DOMAIN-SUFFIX,toutiao.io,DIRECT
 
-## 涉及 IP 检测的直连
+
+## 涉及 IP 检测且没有国内CDN的直连（海外连国内的可以删除这部分或保持默认的不要动）
 ### DOMAIN
 DOMAIN,ip.bjango.com,DIRECT // iStat Menu IP Test
 
-## P2P 下载相关
+## P2P 下载相关（Quantumult 不支持 URL-REGEX）
 DOMAIN-KEYWORD,torrent,DIRECT
 URL-REGEX,ed2k*,DIRECT
 URL-REGEX,magnet*,DIRECT
