--- a/Quantumult/Quantumult.conf
+++ b/Quantumult/Quantumult.conf
@@ -76,17 +76,19 @@ DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
 DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
-## 国内无CDN网站直连（给海外改 PROXY 用）
+## 国内网站直连（给海外改 PROXY 用）
 ### DOMAIN
-DOMAIN,oschina.net,DIRECT
-DOMAIN,oscimg.oschina.net,DIRECT
-DOMAIN,www.oschina.net,DIRECT
+#DOMAIN,oschina.net,DIRECT
 
 ### DOMAIN-SUFFIX
+DOMAIN-SUFFIX,10010.com,DIRECT
+DOMAIN-SUFFIX,10086.cn,DIRECT
 DOMAIN-SUFFIX,114la.com,DIRECT
+DOMAIN-SUFFIX,115.com,DIRECT
 DOMAIN-SUFFIX,17ce.com,DIRECT
 DOMAIN-SUFFIX,189.cn,DIRECT
 DOMAIN-SUFFIX,bootcdn.cn,DIRECT
+DOMAIN-SUFFIX,oschina.net,DIRECT
 DOMAIN-SUFFIX,sinaapp.com,DIRECT
 DOMAIN-SUFFIX,toutiao.io,DIRECT
 
@@ -131,7 +133,7 @@ DOMAIN-SUFFIX,line-cdn.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,line-scdn.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,nhncorp.jp,PROXY,force-remote-dns
 
-## Top blocked sites
+## 国内无法访问的网站
 ### DOMAIN-SUFFIX
 DOMAIN-SUFFIX,2o7.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4everProxy.com,PROXY,force-remote-dns
@@ -144,8 +146,10 @@ DOMAIN-SUFFIX,accountkit.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,adblockplus.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,adobe.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,adobedtm.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,adorama.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,aerisapi.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,akamaihd.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,akiba-web.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,alfredapp.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,allconnected.co,PROXY,force-remote-dns
 DOMAIN-SUFFIX,amazon.com,PROXY,force-remote-dns
@@ -174,8 +178,10 @@ DOMAIN-SUFFIX,arcgis.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,archive.is,PROXY,force-remote-dns
 DOMAIN-SUFFIX,archive.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,archives.gov,PROXY,force-remote-dns
+DOMAIN-SUFFIX,arena.taipei,PROXY,force-remote-dns
 DOMAIN-SUFFIX,armorgames.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,aspnetcdn.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,assimp.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,async.be,PROXY,force-remote-dns
 DOMAIN-SUFFIX,att.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,avgle.com,PROXY,force-remote-dns
