--- a/Quantumult/Quantumult.conf
+++ b/Quantumult/Quantumult.conf
@@ -16,16 +16,8 @@ system, 119.29.29.29,  223.5.5.5
 ## DIRECT
 USER-AGENT,*Vainglory* ,DIRECT
 USER-AGENT,AdBlock*,DIRECT
-USER-AGENT,arrowio*,DIRECT
-USER-AGENT,balls*,DIRECT
 USER-AGENT,Best%20Trace*,DIRECT
-USER-AGENT,eusoft_ting_en_iphone,DIRECT
-USER-AGENT,hide*,DIRECT
-USER-AGENT,MegaWerewolf*,DIRECT
-USER-AGENT,MicroMessenger*,DIRECT
-USER-AGENT,osee2unifiedRelease*,DIRECT
 USER-AGENT,TeamViewer*,DIRECT
-USER-AGENT,ting_en,DIRECT
 USER-AGENT,WebTorrent*,DIRECT
 
 ## PROXY
@@ -87,6 +79,7 @@ DOMAIN-SUFFIX,114la.com,DIRECT
 DOMAIN-SUFFIX,115.com,DIRECT
 DOMAIN-SUFFIX,17ce.com,DIRECT
 DOMAIN-SUFFIX,189.cn,DIRECT
+DOMAIN-SUFFIX,2345.com,DIRECT
 DOMAIN-SUFFIX,bootcdn.cn,DIRECT
 DOMAIN-SUFFIX,oschina.net,DIRECT
 DOMAIN-SUFFIX,sinaapp.com,DIRECT
@@ -190,6 +183,8 @@ DOMAIN-SUFFIX,azureedge.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,azurewebsites.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,badoo.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bandisoft.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,bankmobilevibe.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,banorte.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bbc.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bbc.in,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bbtoystore.com,PROXY,force-remote-dns
@@ -695,6 +690,7 @@ DOMAIN-SUFFIX,akamai.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,appspot.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,autodraw.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bandwagonhost.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,beeg.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,blogblog.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,chromeexperiments.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,creativelab5.com,PROXY,force-remote-dns
