--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -529,7 +529,7 @@ DOMAIN-SUFFIX,potato.im,PROXY,force-remote-dns
 DOMAIN-SUFFIX,prfct.co,PROXY,force-remote-dns
 DOMAIN-SUFFIX,proxfree.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,psiphon3.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ptt.cc,PROXY,force-remote-dns,force-remote-dns
+DOMAIN-SUFFIX,ptt.cc,PROXY,force-remote-dns
 DOMAIN-SUFFIX,pubu.com.tw,PROXY,force-remote-dns
 DOMAIN-SUFFIX,puffinbrowser.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,pushbullet.com,PROXY,force-remote-dns
