--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -177,7 +177,7 @@ DOMAIN-SUFFIX,toutiao.io,DIRECT
 
 ## 涉及 IP 检测且没有国内CDN的直连（海外连国内的可以删除这部分或保持默认的不要动）
 ### DOMAIN
-DOMAIN,ip.bjango.com,DIRECT // iStat Menu IP Test
+DOMAIN,ip.bjango.com,DIRECT
 
 ## P2P 下载相关（Quantumult 不支持 URL-REGEX）
 DOMAIN-KEYWORD,torrent,DIRECT
